@@ -4,6 +4,7 @@ Python Mode News
 New in version 6.1.4
 ---------------------
 
+<<<<<<< HEAD
 - new indent feature/behavior, lp:1280982
   If an empty line was dedented deliberatly, this is
   honored by next lines indent
@@ -13,6 +14,8 @@ New in version 6.1.4
   https://bitbucket.org/andreas_roehler/pydoc-info
   See also INSTALL-INFO-FILES
 
+=======
+>>>>>>> parent of 78c8d77... `py-newline-and-indent' honor dedent, lp:1280982
 - command py-toggle-split-windows-function
   If window is splitted vertically or horizontally.
   Sets customizable variable
